# config_editor

./: CMakeLists.txt  README.md
gui/include/: main_editor.h
gui/src/: main_editor.cpp
src/: main_application.cpp
